# modpack-factory

./: README.md  main.py  pyproject.toml  whiteboard.rnote
examples/fabulously-optimized/: README.md  fabulous.lock.toml  fabulous.toml
examples/maisypack/: README.md  maisypack.lock.toml  maisypack.toml
lib/: jar.py  mod.py  version.py
lib/jar/: extract.py
lib/mod/: mod.py  test_mod.py
lib/resolve/: resolve_mods.py  test_solver.py
lib/solver/: solver.py  test_solver.py
lib/sources/: modrinth.py  test_modrinth.py
lib/toml/: lock.py  mcproject.py  test_toml_constraint.py  toml_constraint.py
tests/: conftest.py  test_jar.py  test_mod.py  test_modrinth.py  test_solver.py  test_toml_constraint.py  test_version.py
utils/: populate_db.py
