[project]
name = "modpack-factory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "aiolimiter>=1.2.1",
    "semver>=3.0.4",
    "tomlkit>=0.13.2",
    "tqdm>=4.67.1",
    "z3-solver>=4.15.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.12.2",
    "types-tqdm>=4.67.0.20250809",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
	# async
	"ASYNC",
	# ruff-specific
	"RUF",
]
